# fynd

./: .gitignore  .pre-commit-config.yaml  Makefile
backend/: .env.example  .gitignore  alembic.ini  main.py  pyproject.toml  pyrightconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 2472d694a3d0_create_initial_tables.py
backend/api/: deps.py  exception_handlers.py  lifespan.py
backend/api/v1/: router.py
backend/core/: clock.py  config.py  database.py  exceptions.py
backend/domain/catalog/: __init__.py  dependencies.py  models.py  router.py  schemas.py
backend/domain/catalog/repositories/: _latest_per_group.py  fx_rate_repository.py  listing_repository.py  price_snapshot_repository.py  scrape_run_repository.py  store_repository.py
backend/domain/catalog/services/: get_catalog_health.py  list_deals.py  list_free_games.py  list_stores.py  refresh_catalog.py
backend/infrastructure/fx/: __init__.py  client.py  frankfurter.py  registry.py
backend/infrastructure/scrapers/: __init__.py  client.py  registry.py  steam.py
backend/tests/: conftest.py  test_app.py  test_smoke.py
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
