[project]
name = "fynd-backend"
version = "0.1.0"
description = "Personal game-deal tracker"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "httpx>=0.28.0",
    "asgi-lifespan>=2.1.0",
    "selectolax>=0.3.0",
    "structlog>=24.4.0",
    "apscheduler>=3.10.4",
    "aiosqlite>=0.20.0",
    "playwright>=1.49.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
    "freezegun>=1.5.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
python_version = "3.14"
warn_unused_ignores = true
exclude = [
    "alembic/versions/",
    ".venv/",
]

[[tool.mypy.overrides]]
module = [
    "playwright.*",
    "apscheduler.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
